frontend/accidents-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accidents-app
  namespace: xconnected
  labels:
    app: accidents-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accidents-app
  template:
    metadata:
      labels:
        app: accidents-app
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: accidents-app
        image: xconnected/components:accidents-app-3.0
        imagePullPolicy: Always
        ports:
        - containerPort: 4204
