frontend/conf-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-app
  namespace: xconnected
  labels:
    app: config-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-app
  template:
    metadata:
      labels:
        app: config-app
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: config-app
        image: xconnected/components:conf-app-3.0
        imagePullPolicy: Always
        ports:
        - containerPort: 4202
