frontend/courtcase-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: courtcases-app
  namespace: xconnected
  labels:
    app: courtcases-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: courtcases-app
  template:
    metadata:
      labels:
        app: courtcases-app
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: courtcases-app
        image: xconnected/components:courtcases-app-3.0
        imagePullPolicy: Always
        ports:
        - containerPort: 4205
