frontend/gpva-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gpva-app
  namespace: xconnected
  labels:
    app: gpva-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gpva-app
  template:
    metadata:
      labels:
        app: gpva-app
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: gpva-app
        image: xconnected/components:gpva-app-3.0
        imagePullPolicy: Always
        ports:
        - containerPort: 4203
