frontend/home-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-app
  namespace: xconnected
  labels:
    app: home-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-app
  template:
    metadata:
      labels:
        app: home-app
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: home-app
        image: xconnected/components:home-app-3.0
        imagePullPolicy: Always
        ports:
        - containerPort: 4200
        volumeMounts:
        - name: environment-config
          mountPath: /usr/share/nginx/html/assets/environment.json
          # subPath: environment.json
        - name: federation-config
          mountPath: /usr/share/nginx/html/assets/federation.manifest.json
          # subPath: federation.manifest.json
        - name: logo-config
          mountPath: /usr/share/nginx/html/assets/logos/sensecure.png
      volumes:
      - name: environment-config
        hostPath:
          path: /data/fe/ui/home/assets/environment.json
      - name: federation-config
        hostPath:
          path: /data/fe/ui/home/assets/federation.manifest.json
      - name: logo-config
        hostPath:
          path: /data/fe/ui/home/assets/logos/sensecure.png
