frontend/people-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: people-app
  namespace: xconnected
  labels:
    app: people-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: people-app
  template:
    metadata:
      labels:
        app: people-app
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: people-app
        image: xconnected/components:people-app-3.0
        imagePullPolicy: Always
        ports:
        - containerPort: 4206
