frontend/conf-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: config-app
  namespace: xconnected
  labels:
    app: config-app
spec:
  ports:
  - port: 4202
    targetPort: 4202
  selector:
    app: config-app
  type: ClusterIP
