frontend/courtcase-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: courtcases-app
  namespace: xconnected
  labels:
    app: courtcases-app
spec:
  ports:
  - port: 4205
    targetPort: 4205
  selector:
    app: courtcases-app
  type: ClusterIP
