frontend/gpva-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: gpva-app
  namespace: xconnected
  labels:
    app: gpva-app
spec:
  ports:
  - port: 4203
    targetPort: 4203
  selector:
    app: gpva-app
  type: ClusterIP
