frontend/home-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: home-app
  namespace: xconnected
  labels:
    app: home-app
spec:
  ports:
  - port: 4200
    targetPort: 4200
  selector:
    app: home-app
  type: ClusterIP
