frontend/itms-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: itms-app
  namespace: xconnected
  labels:
    app: itms-app
spec:
  ports:
  - port: 4201
    targetPort: 4201
  selector:
    app: itms-app
  type: ClusterIP
