frontend/app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: xconnected
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  -
    http:
      paths:
      - path: /itms-app
        pathType: Prefix
        backend:
          service:
            name: itms-app
            port:
              number: 4201
      - path: /conf-app
        pathType: Prefix
        backend:
          service:
            name: config-app
            port:
              number: 4202
      - path: /courtcases-app
        pathType: Prefix
        backend:
          service:
            name: courtcases-app
            port:
              number: 4205
      - path: /people-app
        pathType: Prefix
        backend:
          service:
            name: people-app
            port:
              number: 4206
      - path: /accidents-app
        pathType: Prefix
        backend:
          service:
            name: accidents-app
            port:
              number: 4204
      - path: /gpva-app
        pathType: Prefix
        backend:
          service:
            name: gpva-app
            port:
              number: 4203
      - path: /
        pathType: Prefix
        backend:
          service:
            name: home-app
            port:
              number: 4200
